--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -77,9 +77,9 @@
                 android:layout_marginVertical="25dp"
                 android:layout_marginRight="40dp"
                 android:layout_marginLeft="10dp"
-                android:background="@drawable/effect"
+                android:background="@drawable/effect_pressed"
                 android:text="회원가입"
-                android:textColor="@drawable/effect_color"
+                android:textColor="@drawable/effect_pressed_color"
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
