--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -61,15 +61,44 @@
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@color/mainColor"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/fab"
+        android:background="@drawable/round"
+        android:backgroundTint="#FFBBA5"
         app:layout_constraintBottom_toTopOf="@+id/menu"
-        app:layout_constraintHorizontal_bias="0.98"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.98"
         app:layout_constraintVertical_bias="0.95" />
 
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/fab2"
+        android:background="@drawable/round"
+        android:backgroundTint="#FFFFBB"
+        app:layout_constraintBottom_toTopOf="@+id/fab"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.98"
+        app:layout_constraintVertical_bias="0.95"/>
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/fab3"
+        android:background="@drawable/round"
+        android:backgroundTint="#BBBBFF"
+        app:layout_constraintBottom_toTopOf="@+id/fab2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.98"
+        app:layout_constraintVertical_bias="0.95" />
 
 </android.support.constraint.ConstraintLayout>
